--- a/examples/FinanceBench/rag-ground-truths.yml
+++ b/examples/FinanceBench/rag-ground-truths.yml
@@ -453,6 +453,34 @@ ground-truths:
         2016: 177,546 million  # unreliable
 
 
+  CVSHEALTH_2022_10K:
+    BS:
+      fixed-assets:
+        2022: 12,873 million  # unreliable
+        2021: 12,896 million
+
+      total-assets:
+        2022: 228,275 million
+        2021: 232,999 million
+
+    CF:
+      capex:
+        2022: 2,727 million or 2.7 billion
+        2021: 2,520 million or 2.5 billion
+        2020: 2,437 million or 2.4 billion
+
+    P&L:
+      rev:
+        2022: 322,467 million
+        2021: 292,111 million
+        2020: 268,706 million
+
+      net:
+        2022: 4,149 million
+        2021: 7,910 million  # unreliable
+        2020: 7,179 million  # unreliable
+
+
   PAYPAL_2022_10K:
     BS:
       curr-assets:
