--- a/examples/FinanceBench/expert-plan-templates.yml
+++ b/examples/FinanceBench/expert-plan-templates.yml
@@ -829,9 +829,10 @@ cash-conv-cyc:
         - current {PERIOD} annual fiscal period end?
 
     - task: >-
-        What is value in dollars of
-        `(Total) Cost of Goods Sold, a.k.a. (Total) COGS, or (Total) Cost of Sales, or (Total) Cost of Revenue`
-        (or most similar-meaning reported line item)
+        What are values in dollars of:
+        - `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`; and
+        - `(Total) Cost of Goods Sold, a.k.a. (Total) COGS, or (Total) Cost of Sales, or (Total) Cost of Revenue`
+        (or most similar-meaning reported line items to those)
 
         on `(Consolidated) Income Statement, a.k.a. (Consolidated) Profit-and-Loss (P&L) Statement,
         or (Consolidated) Earnings Statement, or (Consolidated) Operations Statement`
