--- a/examples/FinanceBench/rag-ground-truths.yml
+++ b/examples/FinanceBench/rag-ground-truths.yml
@@ -11,7 +11,9 @@ defs:
   total-assets: Total Assets
 
   payables: Accounts Payable
+  st-debt: Short-Term Debt, or Current Portion of (Long-Term) Debt
   curr-liabs: (Total) Current Liabilities
+  lt-debt: Long-Term Debt
 
 
   CF: Cash Flow(s) Statement
@@ -600,6 +602,17 @@ ground-truths:
     # P&L:
       # ebit:
       # int:
+
+
+  MICROSOFT_2023_10K:
+    BS:
+      st-debt:
+        2023: 5,247 million
+        2022: 2,749 million
+
+      lt-debt:
+        2023: 41,990 million
+        2022: 47,032 million
 
 
   PAYPAL_2022_10K:
