update examples/FinanceBench/rag-ground-truths.yml > PAYPAL_2022_10K

--- a/examples/FinanceBench/rag-ground-truths.yml
+++ b/examples/FinanceBench/rag-ground-truths.yml
@@ -664,6 +664,8 @@ ground-truths:
     BS:
       curr-assets:
         2022: 57,517 million
+        2021: 52,574 million
 
       curr-liabs:
         2022: 45,101 million
+        2021: 43,029 million
