mark financebench_id_00080 as verified

--- a/examples/FinanceBench/expert-plan-map.yml
+++ b/examples/FinanceBench/expert-plan-map.yml
@@ -41,7 +41,7 @@ financebench_id_00552: debt-comp
 financebench_id_04458: ebitda-margin
 financebench_id_04302: cogs-margin  #
 financebench_id_04080: inv-turnover-ratio  #
-financebench_id_00080: net-work-cap
+financebench_id_00080: net-work-cap  #
 financebench_id_03620: ebitda  # TODO: but also less CapEx for question
 financebench_id_04481: ebitda-margin
 financebench_id_00216: quick-ratio  #
