--- a/examples/FinanceBench/rag-ground-truths.yml
+++ b/examples/FinanceBench/rag-ground-truths.yml
@@ -21,7 +21,7 @@ defs:
   d&a: Depreciation & Amortization, a.k.a. D&A (of Fixed Assets or Property, Plant & Equipment (PP&E))
   op-cf: (Net) Cash Flows from Operations, a.k.a. (Net) Operating Cash Flows
 
-  capex: Capital Expenditure(s), a.k.a. CapEx, or Property, Plant & Equipment (PP&E) Expenditure(s)/Purchase(s)/Spending
+  capex: Capital Expenditure(s), a.k.a. CapEx, or Capital Spending, or Property, Plant & Equipment (PP&E) Expenditure(s)/Purchase(s)
 
   div: Cash Dividends
 
