--- a/examples/FinanceBench/rag-ground-truths.yml
+++ b/examples/FinanceBench/rag-ground-truths.yml
@@ -713,6 +713,31 @@ ground-truths:
         2022: 2,388 million
         2021: 3,055 million
 
+      fixed-assets:
+        2022: 107,434 million
+        2021: 99,696 million
+
+      total-assets:
+        2022: 379,680 million
+        2021: 366,596 million
+
       curr-liabs:
         2022: 50,171 million
         2021: 47,160 million
+
+    CF:
+      capex:
+        2022: 23,087 million  # unreliable
+        2021: 20,286 million  # unreliable
+        2020: 18,192 million  # unreliable
+
+    P&L:
+      rev:
+        2022: 136,835 million
+        2021: 133,613 million
+        2020: 128,292 million
+
+      net:
+        2022: 21,256 million  # unreliable
+        2021: 22,065 million
+        2020: 17,801 million
