--- a/examples/FinanceBench/rag-ground-truths.yml
+++ b/examples/FinanceBench/rag-ground-truths.yml
@@ -116,27 +116,27 @@ ground-truths:
   ADOBE_2015_10K:
     BS:
       curr-liabs:
-        2015: 2,213,556 or 2,213.6 million or 2.2 billion
-        2014: 2,494,435 or 2,494.4 million or 2.5 billion
+        2015: 2,213.556 million or 2,213.6 million or 2.2 billion
+        2014: 2,494.435 million or 2,494.4 million or 2.5 billion
 
     CF:
       op-cf:
-        2015: 1,469,502 or 1,469.5 million or 1.5 billion
-        2014: 1,287,482 or 1,287.5 million or 1.3 billion
-        2013: 1,151,686 or 1,151.6 million or 1.2 billion
+        2015: 1,469.502 million or 1,469.5 million or 1.5 billion
+        2014: 1,287.482 million or 1,287.5 million or 1.3 billion
+        2013: 1,151.686 million or 1,151.6 million or 1.2 billion
 
 
   ADOBE_2017_10K:
     BS:
       curr-liabs:
-        2017: 6,075,687 or 6,075.7 million or 6.0 billion  # unreliable
-        2016: 5,272,411 or 5,272.4 million or 5.3 billion  # unreliable
+        2017: 6,075.687 million or 6,075.7 million or 6.0 billion  # unreliable
+        2016: 5,272.411 million or 5,272.4 million or 5.3 billion  # unreliable
 
     CF:
       op-cf:
-        2017: 2,912,853 or 2,912.9 million or 2.9 billion  # unreliable
-        2016: 2,199,728 or 2,199.7 million or 2.2 billion  # unreliable
-        2013: 1,469,502 or 1,469.5 million or 1.5 billion  # unreliable
+        2017: 2,912.853 million or 2,912.9 million or 2.9 billion  # unreliable
+        2016: 2,199.728 million or 2,199.7 million or 2.2 billion  # unreliable
+        2013: 1,469.502 million or 1,469.5 million or 1.5 billion  # unreliable
 
 
   ADOBE_2022_10K:
