add examples/FinanceBench/rag-ground-truths.yml > MICROSOFT_2016_10K

--- a/examples/FinanceBench/rag-ground-truths.yml
+++ b/examples/FinanceBench/rag-ground-truths.yml
@@ -604,6 +604,14 @@ ground-truths:
       # int:
 
 
+  MICROSOFT_2016_10K:
+    P&L:
+      cogs:
+        2016: 32,780 million  # unreliable
+        2015: 33,038 million  # unreliable
+        2014: 27,078 million  # unreliable
+
+
   MICROSOFT_2023_10K:
     BS:
       st-debt:
