--- a/examples/FinanceBench/Makefile
+++ b/examples/FinanceBench/Makefile
@@ -1,6 +1,9 @@
 get-doc:
 	@poetry run python data.py ${name}
 
+eval-test:
+	@poetry run python eval.py answer --no-human-eval
+
 
 htp-auto-static-oodar-solve:
 	@poetry run python htp_oodar_agent.py ${id}
@@ -52,6 +55,7 @@ rag-test:
 
 ssm-discuss:
 	@poetry run python ssm.py ${id}
+
 
 streamlit-run:
 	@poetry run streamlit run streamlit-main.py --server.allowRunOnSave=true --server.runOnSave=true
