update financebench_id_00757 ground truth

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -608,7 +608,7 @@ financebench_id_00757:
 
   category: 0-RETRIEVE
   correctness: >-
-    the answer mentions that one customer accounted for 16% of revenue
+    the answer mentions that one customer accounted for large portion of revenue
 
 
 financebench_id_00476:
