mark financebench_id_01346 with evaluator-unreliable

--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1133,7 +1133,10 @@ financebench_id_01346:
 
   category: 2-CALC-CHANGE
   correctness: >-
-    the answer says that Effective Tax Rate changed from 20% to 23%, and/or that it increased by 3 percentage points
+    the answer says that Effective Tax Rate changed from approximately 20% to approximately 23%,
+    and/or that it increased by 3 percentage points
+
+  evaluator-unreliable: true
 
 
 financebench_id_00005:
