--- a/examples/FinanceBench/rag-ground-truths.yml
+++ b/examples/FinanceBench/rag-ground-truths.yml
@@ -780,6 +780,13 @@ ground-truths:
         2020: 10,080 million
 
 
+  PFIZER_2021_10K:
+    BS:
+      fixed-assets:
+        2021: 14,882 million  # unreliable
+        2020: 13,745 million  # unreliable
+
+
   VERIZON_2022_10K:
     BS:
       cash-and-equiv:
