--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1829,7 +1829,7 @@ financebench_id_00882:
 
   category: 3-CALC-COMPLEX
   correctness: >-
-    the answer contains a calculated total quantity that is equivalent to or approximately equal to
+    the answer contains a calculated total quantity that is greater than or equal to
     8,400,000,000, 8400 million or 8.4 billion
     (if the answer is a single number, assume that it is that calculated total amount)
 
