--- a/examples/FinanceBench/expert-plan-map.yml
+++ b/examples/FinanceBench/expert-plan-map.yml
@@ -1,7 +1,7 @@
 financebench_id_00499: cap-intens  #
 financebench_id_00807: quick-ratio  #
 financebench_id_02987: fa-turnover-ratio  #
-financebench_id_07966: capex-as-pct-of-rev-3y-avg
+financebench_id_07966: capex-as-pct-of-rev-3y-avg  #
 financebench_id_04735: op-cf-ratio  #
 financebench_id_03856: op-cf-ratio
 financebench_id_00438: op-margin-comp  #
