--- a/examples/FinanceBench/expert-plan-templates.yml
+++ b/examples/FinanceBench/expert-plan-templates.yml
@@ -885,7 +885,10 @@ debt-comp:
     - task: |-
         Calculate `Total Debt` of {COMPANY} in dollar values according to formula:
 
-        `Total Debt` = `Long-Term Debt` + `Short-Term Debt, or Current Portion of (Long-Term) Debt`
+        `Total Debt` = (
+          `Long-Term Debt (EXCLUDING any current/short-term portion)` +
+          `Short-Term Debt, or Current Portion of (Long-Term) Debt`
+        )
 
         as at following two annual fiscal period ends:
         - one-year-before previous annual fiscal period end preceding {PERIOD}; and
@@ -897,7 +900,7 @@ debt-comp:
         # because RAG LMs may not be good at calculation & mathematical reasoning
         - task: |-
             What are values in dollars of:
-            - `Long-Term Debt`; and
+            - `Long-Term Debt (EXCLUDING any current/short-term portion)`; and
             - `Short-Term Debt, or Current Portion of (Long-Term) Debt`
             (or most similar-meaning reported line items to those)
 
