--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -620,6 +620,8 @@ financebench_id_00757:
   correctness: >-
     the answer mentions that one customer accounted for large portion of revenue
 
+  evaluator-unreliable: true
+
 
 financebench_id_00476:
   doc: AMERICANEXPRESS_2022_10K
