--- a/examples/FinanceBench/ground-truths.yml
+++ b/examples/FinanceBench/ground-truths.yml
@@ -1479,6 +1479,8 @@ financebench_id_03718:
     the answer contains a calculated CAGR percentage value that is in the range from 0.400% to 0.500%
     (if the answer is a single number, assume that it is that calculated CAGR percentage value)
 
+  evaluator-unreliable: true
+
 
 financebench_id_04171:
   doc: MGMRESORTS_2018_10K
