--- a/examples/FinanceBench/expert-plan-templates.yml
+++ b/examples/FinanceBench/expert-plan-templates.yml
@@ -141,6 +141,33 @@ cogs-margin:
         of {COMPANY} for {PERIOD} fiscal period?
 
 
+cogs-margin-3y-avg:
+  task: |-
+    Calculate 3-year average `Cost of Goods Sold (COGS) Margin` of {COMPANY} as percentage value
+
+  sub-plans:
+    # 1 single Retrieval task for multiple quantities on same statement, for both efficiency & mutual consistency;
+    # retrieve individual numerator & denominator balance values only, without taking division
+    # because RAG LMs may not be good at calculation & mathematical reasoning
+    - task: |-
+        What are values in dollars of:
+        - `(Total) Cost of Goods Sold, a.k.a. (Total) COGS, or (Total) Cost of Sales, or (Total) Cost of Revenue`; and
+        - `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`
+        (or most similar-meaning reported line items to those)
+
+        on `(Consolidated) Income Statement, a.k.a. (Consolidated) Profit-and-Loss (P&L) Statement,
+        or (Consolidated) Earnings Statement, or (Consolidated) Operations Statement`
+        (or most similar-meaning statement)
+
+        of {COMPANY} for past 3 fiscal years?
+
+    - task: >-
+        Calculate 3-year average `Cost of Goods Sold (COGS) Margin`
+        by dividing sum of `(Total) Cost of Goods Sold, a.k.a. (Total) COGS, or (Total) Cost of Sales, or (Total) Cost of Revenue`
+        by sum of `(Total) (Net) (Operating) Revenue(s), a.k.a. (Total) (Net) Sales`,
+        and return division result as percentage value
+
+
 gross-margin-comp:
   task: >-
     Calculate change and assess degradation/improvement in `Gross (Income or Profit or Earnings) Margin` of {COMPANY}
