enhance examples/FinanceBench/eval.eval_all(...) with refresh option

--- a/examples/FinanceBench/Makefile
+++ b/examples/FinanceBench/Makefile
@@ -57,6 +57,9 @@ ssm-discuss:
 eval:
 	@poetry run python eval.py ${output}
 
+eval-no-refresh:
+	@poetry run python eval.py ${output} --no-refresh
+
 eval-test:
 	@poetry run python eval.py answer --no-human-eval
 
