--- a/pyproject.toml
+++ b/pyproject.toml
@@ -101,11 +101,13 @@ llama-index-callbacks-openinference = {version = ">=0.1", optional = true}
 llama-index-callbacks-promptlayer = {version = ">=0.1", optional = true}
 llama-index-callbacks-wandb = {version = ">=0.1", optional = true}
 streamlit = {version = ">=1.34", optional = true}
+streamlit-extras = {version = ">=0.4", optional = true}
 streamlit-mic-recorder = {version = ">=0.0.8", optional = true}
 
 [tool.poetry.extras]
 contrib = [
   "streamlit",
+  "streamlit-extras",
   "streamlit-mic-recorder",
 ]
 llama-index-callbacks = [
